stylesheets/view-tail-large-files.less
@import "ui-variables";

.view-tail-large-files {
  display:        flex;
  flex-direction: column;
  overflow:       hidden;
  
  // font-size:        @font-size;
  // font-family:      @font-family;
  color:            @syntax-text-color;
  background-color: @syntax-background-color;

  .vtlf-horiz {
    display: flex;
    flex-direction: row;
    flex:  1;
    order: 1;
    
    .lines-outer {
      order:       1;
      flex-grow:   1;
      flex-shrink: 1;
      flex-basis: auto;
      overflow-x: auto;
      width:      100%;
      position:   relative;
      display:    inline-block;
      
      .lines {
        position: absolute;
        overflow: hidden;
        display:  none;
        height:   100%;
        
        .line {
          position:absolute;
          
          .line-num {
            clear:both; 
            float:left; 
            text-align:right;
            margin-right:10px;
            display:    inline-block;
          }
          .line-text {
            white-space: pre; 
            float:left;
            display:    inline-block;
          }
        }
      }
    }
    .scrollbar {
      order:            2;
      flex:             18px;
      position:         relative;
      background-color: @button-background-color;
      width:            18px; 
      top:              0; 
      right:            0; 
      
      .thumb {
        position:         absolute;  
        background-color: @button-background-color-selected;
        width:            16px; 
        left:              1px; 
      }
    }
  }
}

